--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./a16d3852-3463-4439-b93b-c7839363a091.js"></script>
-    <script src="./a16d3852-3463-4439-b93b-c7839363a091.js"></script>
-    <script src="./a16d3852-3463-4439-b93b-c7839363a091.js"></script>
+    <!-- <script src="./a16d3852-3463-4439-b93b-c7839363a091.js"></script>
+    <script src="./a16d3852-3463-4439-b93b-c7839363a091.js"></script> -->
 </head>
 <body>
     <button class="interact-button">Connect Wallet</button>
+
+    <!-- trial for the useable code -->
+
+    
+
+    <!-- trial for the useable code -->
 </body>
 </html>
